--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -6,5 +6,8 @@ jobs:
   say-hello:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello World"
+      - name: echoing some information
+        run: echo "Hello World"
+      - name: Checkout
+        uses: actions/checkout@v3.5.3
       - run: python test.py
