--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/setup-python@v4
         with: 
           python-version: 3.10
-      - run: pip install Flask
+      - run: python -m pip install Flask
       - run: python test.py
