--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -22,6 +22,7 @@ jobs:
       - run: python test.py
   
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - run: echo "Deploying"
